# RAG-knowledge-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  middleware.py
app/api/: routes.py  schemas.py
app/audit/: __init__.py  models.py  repository.py
app/core/: config.py
app/evaluation/: answer_eval.py  dataset.py  metrics.py  report.py
app/ingestion/: chunker.py  cleaning.py  index_versions.py  jobs.py  loaders.py  manifest.py  pipeline.py  table_extractors.py
app/observability/: __init__.py  logging.py  metrics.py
app/rag/: bm25.py  cache.py  confidence.py  documents.py  embeddings.py  fusion.py  hybrid_retriever.py  llm.py  (+6 more)
data/: byd_chinese_manifest.json  sec_filings_manifest.json
docs/: architecture.md  deployment.md  evaluation.md  interview-guide.md  production-readiness.md  tradeoffs.md  wecom-integration.md
reports/: answer-eval-20260616-132709.json  answer-eval-20260616-144008.json  answer-eval-20260623-134526.json  answer-eval-20260623-184817.json  answer-eval-20260623-191226.json  answer-eval-phase7.json  answer-eval-ragas-optimized.json  answer-eval-ragas-smoke.json  latest-answer-eval.json  latest-retrieval.json  retrieval-20260616-125153.json  retrieval-20260616-132031.json  retrieval-20260622-232243.json  retrieval-20260622-232812.json  retrieval-20260623-134529.json  retrieval-20260623-182756.json  retrieval-20260623-185716.json  retrieval-comparison-20260616-141357.json  retrieval-comparison-20260616-143615.json  retrieval-comparison-20260623-184159.json  retrieval-comparison-20260623-190622.json  retrieval-comparison-phase6-local.json  retrieval-dense-phase6.json  retrieval-hybrid-phase6.json  retrieval-hybrid-rerank-parent-phase6.json  retrieval-hybrid-rerank-phase6.json
scripts/: benchmark.py  dev.sh  download_sec_filings.py  evaluate.py  evaluate_answers.py  ingest.py  warmup.py  worker.py
tests/: test_acl.py  test_advanced_evaluation.py  test_answer_evaluation.py  test_api_retriever_factory.py  test_audit_log.py  test_auth_context.py  test_bm25.py  test_cache.py  test_chunker.py  test_document_cleaning.py  test_documents.py  test_docx_html_loaders.py  test_download_sec_filings.py  test_embeddings.py  test_enterprise_smoke.py  test_error_handling.py  test_evaluation.py  test_evaluation_endpoint.py  test_feedback_api.py  test_fusion.py  test_hybrid_retriever.py  test_index_versions.py  test_ingestion_jobs.py  test_loaders.py  test_metrics.py  test_parent_child_retrieval.py  test_parent_store.py  test_permission_ingestion.py  test_permission_retrieval.py  test_phase2_config.py  test_phase4_config.py  test_phase5_config.py  test_pipeline_corpus.py  test_pipeline_parent_corpus.py  test_query_transform.py  test_rag_service.py  test_reranker.py  test_streaming.py  test_table_extraction.py  test_warmup.py  (+5 more)
(+28 files in other folders)
