[project]
name = "rag-knowledge-qa-system"
version = "0.1.0"
description = "A reproducible RAG knowledge QA system for interview practice."
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.111.0",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pypdf>=4.2.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
