[project]
name = "rag-knowledge-qa-system"
version = "0.1.0"
description = "A reproducible RAG knowledge QA system for interview practice."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.0",
    "fastapi>=0.111.0",
    "jieba>=0.42.1",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "socksio>=1.0.0",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]
reranker = [
    "FlagEmbedding>=1.2.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
