[project]
name = "rag-knowledge-qa-system"
version = "0.1.0"
description = "A reproducible RAG knowledge QA system for interview practice."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.0",
    "datasets>=2.19.0,<6.0.0",
    "fastapi>=0.111.0",
    "FlagEmbedding>=1.2.11",
    "jieba>=0.42.1",
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "ragas>=0.2.0,<0.3.0",
    "sentence-transformers>=3.0.0",
    "socksio>=1.0.0",
    "sse-starlette>=2.1.0",
    "transformers>=4.41.0,<5.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]
pdf-tables = [
    "pdfplumber>=0.11.0",
]
prod = [
    "redis>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
